# 3-4-Structure-data

./: .venv  README.md  db_users.py  library.json  main.py  pyproject.toml
static/: styles.css
tasks_2+4/: database.py  users.json
tasks_2+4/templates/: add_class.html  index.html  statistics.html  view_schedule.html
templates/: add_files.html  index.html  login.html  register.html  search_class.html  statistics.html  view_log.html  view_schedule.html
